New commits[events page UI]
updated readme with images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>No place like Events <span>HUb_Ke</span></h1>
                 <h6>Spot your favorite place for leisure and fun</h6>
 
-                <input type="button" value="Find events">
+                <a href="/html/events.html"><input type="button" value="Find events"></a>
             </div>
 
         </div>
@@ -148,6 +148,7 @@
         </div>
 
     </div>
+
     
 </body>
 </html>
