--- a/html/events.html
+++ b/html/events.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="btn len">
-                <input type="button" value="Sign in">
+                <input type="button" id="signup" value="Sign in">
                 <input type="button" value="Buy Ticket">
             </div>
 
@@ -245,4 +245,5 @@
     </div>
     
 </body>
+<script src="../js/app.js" type="text/javascript"></script>
 </html>
