--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a9f6e9c98f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
+    
     <title>Events Hub_Ke</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                 <h1>No place like Events <span>HUb_Ke</span></h1>
                 <h6>Spot your favorite place for leisure and fun</h6>
 
-                <a href="/html/events.html"><input type="button" value="Find events"></a>
+                <a href="" id="disc"><input type="button" value="Find events"></a>
             </div>
 
         </div>
@@ -149,6 +150,7 @@
 
     </div>
 
-    
+
 </body>
+<script src="./js/app.js" type="text/javascript"></script>
 </html>
