modified styles on the index page

--- a/html/events.html
+++ b/html/events.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="btn len">
-                <input type="button" id="signup" value="Sign in">
+                <a href="../html/signup.html"><input type="button" id="signup" value="Sign in"></a>
                 <input type="button" value="Buy Ticket">
             </div>
 
