--- a/html/login.html
+++ b/html/login.html
@@ -18,7 +18,7 @@
                 <img src="../images/events-signup.svg" alt="bg-login">
 
                 <div class="logo len">
-                    <i class="far fa-times-circle"></i>
+                    <a href="../html/events.html"><i class="far fa-times-circle"></i></a>
                     <span>events<b>HUB</b></span>
                 </div>
 
@@ -27,7 +27,7 @@
             <div class="part2">
                 <div class="login-s">
                     <h5>Don't have an account?</h5>
-                    <input type="button" value="Sign up">
+                    <a href="../html/signup.html"><input type="button" value="Sign up"></a>
 
                 </div>
 
