--- a/html/signup.html
+++ b/html/signup.html
@@ -26,7 +26,7 @@
             <div class="part2">
                 <div class="login-s">
                     <h5>Already have an account?</h5>
-                    <input type="button" value="Login">
+                    <a href="../html/login.html"><input type="button" value="Login"></a>
 
                 </div>
 
