--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                             Maiores laborum distinctio voluptates fugit!
                         </p>
-                        <h5>CTO,</h5>
+                        <h5>CTO</h5>
                     </div>
 
                 </div>
