--- a/frontend/html/events.html
+++ b/frontend/html/events.html
@@ -63,7 +63,7 @@
             </div>
             <div class="content">
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -120,7 +120,7 @@
             </div>
             <div class="content">
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -177,7 +177,7 @@
             </div>
             <div class="content">
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -190,7 +190,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
@@ -216,7 +216,7 @@
                 </div>
 
                 <div class="evn-t">
-                    <img src="/images/image6.jpg" alt="event-today">
+                    <img src="../images/image6.jpg" alt="event-today">
                     <h4>Event title</h4>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo amet officiis quo, sit veniam.</h5>
                     <h6>Date</h6>
